Implements find rate functionality
