# app/controllers/rates_controller.rb
@@ -1,14 +1,23 @@
 class RatesController < ApplicationController
-	# User can query rates
+	# This endpoint will return a rate for a given time range if one exists
+	# If there are multiple rates for a given time range, it will return unavailable
+	# If a given time range spans over a day, it will return unavailable
+	# Parameter format:
+	# start_datetime: iso-8601 datetime
+	# end_datetime: iso-8601 datetime
 	def index
-		# Convert time to UTC
-		# Figure out dates
+		result = rates_query.find_rate
 
+		if rates_query.successful
+			render json: { price: result }, code: 200
+		else
+			render json: { errors: rates_processor.errors }, code: 400
+		end
 	end
 
 	# This endpoint will delete the list of current rates and create a new list of rates
 	# if the rate list was formatted correctly and no rates overlap on any given day
-	# Format:
+	# Parameter format:
 	# "days": comma separated, no spaces list of days
 	# sun - Sunday, mon - Monday, tues - Tuesday, wed - Wednesday, thurs - Thursday, fri - Friday, sat - Saturday
 	# "times": two numbers with four digits each between 0000 and 2400 separated by a dash character
@@ -29,5 +38,10 @@ class RatesController < ApplicationController
 
 	def rates_processor
 		@rates_processor ||= RatesProcessor.new
+	end
+
+	# Need to gsub spaces with + because + gets stripped as a query parameter
+	def rates_query
+		@rates_query ||= RatesQuery.new(start_datetime: params[:start_datetime].gsub(' ', '+'), end_datetime: params[:end_datetime].gsub(' ', '+'))
 	end
 end
